@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-07T01:27:26Z",
-  "count" : 3,
+  "timestamp" : "2022-07-20T08:21:25Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
