@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-20T01:23:04Z",
+  "timestamp" : "2022-07-20T08:21:25Z",
   "count_outdated" : 401,
   "uniques_outdated" : 231,
-  "count" : 427,
+  "count" : 426,
   "uniques" : 246,
   "clones" : [
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
