@@ -1,3 +1,10 @@
+2022-07-20T08:21:25Z:
+* notice: last 14d: unq all: 4 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 231 401 / 246 427
+* notice: next accum: outdated-unq outdated-all / unq all: 231 401 / 246 426
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [] / [2022-07-06]
+
 2022-07-20T01:23:04Z:
 * notice: last 14d: unq all: 4 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 231 401 / 245 426
